// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField displays error state 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 1px solid #24292e1f;
  border-radius: 0;
  border: none;
  color: #3d4150;
  display: block;
  font-weight: 400;
  height: 100%;
  line-height: 1.3;
  width: 100%;
  font-size: 1.125rem;
  padding: 8px 0 8px 16px;
  height: 36px;
}

.c0 svg {
  fill: #3d4150;
  transition: fill 0.3s ease;
}

.c0:required {
  box-shadow: none;
}

.c0:focus {
  outline: none;
}

.c0:focus~label {
  background-color: white;
  color: #1648ff;
  font-weight: bold;
  line-height: 1;
  color: #1648ff;
  font-weight: 500;
  transform: scale(0.75) translateY(-70px);
}

.c0:focus~label svg {
  fill: #1648ff;
  transition: fill 0.3s ease;
}

<input
  class="c0"
  type="text"
/>
`;

exports[`InputField renders with different variants 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 1px solid #24292e1f;
  border-radius: 0;
  border: none;
  color: #3d4150;
  display: block;
  font-weight: 400;
  height: 100%;
  line-height: 1.3;
  width: 100%;
  border-bottom: 2px solid #24292e1f;
  font-size: 1.125rem;
  padding: 8px 0 8px 16px;
  height: 36px;
}

.c0 svg {
  fill: #3d4150;
  transition: fill 0.3s ease;
}

.c0:required {
  box-shadow: none;
}

.c0:focus {
  outline: none;
}

.c0:focus~label {
  background-color: white;
  color: #1648ff;
  font-weight: bold;
  line-height: 1;
  color: #1648ff;
  font-weight: 500;
  transform: scale(0.75) translateY(-70px);
}

.c0:focus~label svg {
  fill: #1648ff;
  transition: fill 0.3s ease;
}

<input
  class="c0"
  type="text"
/>
`;

exports[`InputField renders with different variants 2`] = `
.c0 {
  background-color: transparent;
  border-bottom: 1px solid #24292e1f;
  border-radius: 0;
  border: none;
  color: #3d4150;
  display: block;
  font-weight: 400;
  height: 100%;
  line-height: 1.3;
  width: 100%;
  font-size: 1.125rem;
  padding: 8px 0 8px 16px;
  height: 36px;
}

.c0 svg {
  fill: #3d4150;
  transition: fill 0.3s ease;
}

.c0:required {
  box-shadow: none;
}

.c0:focus {
  outline: none;
}

.c0:focus~label {
  background-color: white;
  color: #1648ff;
  font-weight: bold;
  line-height: 1;
  color: #1648ff;
  font-weight: 500;
  transform: scale(0.75) translateY(-70px);
}

.c0:focus~label svg {
  fill: #1648ff;
  transition: fill 0.3s ease;
}

<input
  class="c0"
  type="text"
/>
`;
